Infinite loop on using strip as modifier mask #74958

Closed
opened 2020-03-20 08:15:40 +01:00 by Michael Jastram · 6 comments

System Information
Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 21:12, hash: d2c3544c5c
Worked: unknown

Short description of error
The title says it all: When I add a Gaussian Burr, any new selection will immediately trigger the problem.. Be careful when testing: Within seconds, Blender consumes all my memory (16GB) and locks up the computer. Not even the mouse moves any more, I need to reboot.

Exact steps for others to reproduce the error

  1. Start a new project in VSE mode
  2. Add any strip - even a color strip will do
  3. Add the effect strip "Gaussian Blur"
  4. Select the color strip (from 2.) and add strip modifier "Mask"
  5. Set "Mask Input Type" to "Strip" and set Maks to "Gaussian Blur"
    image.png
  6. So far so good. Now, if I move cursor to a different position in the strip, Blender locks up within seconds. I have a memory widget on my toolbar, where I can see how within 2-3 seconds, all memory is consumed. At this point, the mouse locks up. I can't even switch to the console any more. I have to restart the computer using the power button.
**System Information** Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.83 (sub 10), branch: master, commit date: 2020-03-19 21:12, hash: `d2c3544c5c` Worked: unknown **Short description of error** The title says it all: When I add a Gaussian Burr, any new selection will immediately trigger the problem.. Be careful when testing: Within seconds, Blender consumes all my memory (16GB) and locks up the computer. Not even the mouse moves any more, I need to reboot. **Exact steps for others to reproduce the error** 1. Start a new project in VSE mode 2. Add any strip - even a color strip will do 3. Add the effect strip "Gaussian Blur" 4. Select the color strip (from 2.) and add strip modifier "Mask" 5. Set "Mask Input Type" to "Strip" and set Maks to "Gaussian Blur" ![image.png](https://archive.blender.org/developer/F8417210/image.png) 6. So far so good. Now, if I move cursor to a different position in the strip, Blender locks up within seconds. I have a memory widget on my toolbar, where I can see how within 2-3 seconds, all memory is consumed. At this point, the mouse locks up. I can't even switch to the console any more. I have to restart the computer using the power button.

Added subscriber: @jastram

Added subscriber: @jastram

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Richard Antalik changed title from Crash in VSE when adding Gaussinan Blur as strip modifier due to memory leak to Infinite loop on using strip as modifier mask 2020-03-21 01:18:02 +01:00

Added subscribers: @iss, @Sergey

Added subscribers: @iss, @Sergey
Richard Antalik was assigned by Sergey Sharybin 2020-06-12 13:31:10 +02:00

@iss, since you have patch, assigning to you, indicating the work is being made.
Will have a pass of review in a bit.

@iss, since you have patch, assigning to you, indicating the work is being made. Will have a pass of review in a bit.

This issue was referenced by 7ceb6ffe57

This issue was referenced by 7ceb6ffe57e1078498315807fbd551c925fc93d5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:21 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74958
No description provided.