Fix T74958: Infinite loop on using strip as modifier mask

Add recursion check before assigning strip as a mask for modifier.
Same check is used for recursion check when reassigning effect input, so it
should not be possible to create recursion at all.